tests/errors/binding/main-concrete.fil
// check default parameters in the main component
comp main[?A=31, ?B=1+A]<'G:1>() -> () {

}