tests/errors/binding/main-concrete.expect
---CODE---
1
---STDERR---
error: Default values for parameters in the main component must be concrete
  ┌─ tests/errors/binding/main-concrete.fil:2:19
  │
2 │ comp main[?A=31, ?B=1+A]<'G:1>() -> () {
  │                   ^ Parameter was not given a concrete value

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
